--- a/simtwo/requirements.txt
+++ b/simtwo/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.2.3
 gunicorn==20.1.0
-tensorflow==2.8.0
+tensorflow==2.11.0  # Upgrade to latest stable version
 pandas==1.3.5
 requests==2.26.0
 APScheduler==3.10.4
@@ -30,7 +30,7 @@ python-dateutil==2.9.0.post0
 pytz==2025.2
 scipy==1.10.1
 six==1.17.0
-werkzeug==2.2.2  # Add this line to ensure compatibility with Flask 2.x
+werkzeug==2.2.2  # Ensure compatibility with Flask 2.x
 python-binance==1.0.15
 scikit-learn==1.0.2
 python-dotenv==0.21.1
